funcional, falta terminar de comentar, candidato a entregable

--- a/lab1/makefile
+++ b/lab1/makefile
@@ -1,28 +1,29 @@
 FLAGS = -Wall -std=c++11 -march=native -Ofast
 
-# Directorios
+# para no llenar el directorio de los .o, generamos uno
 OBJ_DIR = obj
 
-# Target por defecto (sin tracy)
+# defecto sin tracy
 all: $(OBJ_DIR) water_jugs
 
-# Target con tracy
+# si se compila con tracy
 tracy: FLAGS += -DTRACY_ENABLE
 tracy: $(OBJ_DIR) water_jugs_tracy
 
-# Crear directorio obj si no existe
+# mkdir directio para los .o
 $(OBJ_DIR):
 	mkdir -p $(OBJ_DIR)
 
-# Ejecutable principal sin tracy
+# target sin tracy
 water_jugs: $(OBJ_DIR)/State.o $(OBJ_DIR)/Search.o $(OBJ_DIR)/Heap.o $(OBJ_DIR)/HashTable.o $(OBJ_DIR)/Solver.o $(OBJ_DIR)/main.o
 	g++ ${FLAGS} $(OBJ_DIR)/*.o -o water_jugs
 
-# Ejecutable con tracy
+# target con tracy agregado
 water_jugs_tracy: $(OBJ_DIR)/State.o $(OBJ_DIR)/Search.o $(OBJ_DIR)/Heap.o $(OBJ_DIR)/HashTable.o $(OBJ_DIR)/Solver.o $(OBJ_DIR)/main.o
 	g++ ${FLAGS} $(OBJ_DIR)/*.o /usr/lib/libTracyClient.a -o water_jugs
 
-# Reglas de compilacion para cada objeto
+# compilacion para cada objecto y sus dependencias
+# no hay problemas con los .h por los pragma once
 $(OBJ_DIR)/main.o: src/main.cpp
 	g++ ${FLAGS} -I./include -c src/main.cpp -o $(OBJ_DIR)/main.o
 
@@ -41,12 +42,6 @@ $(OBJ_DIR)/HashTable.o: src/HashTable.cpp include/HashTable.h
 $(OBJ_DIR)/Solver.o: src/Solver.cpp include/Solver.h
 	g++ ${FLAGS} -I./include -c src/Solver.cpp -o $(OBJ_DIR)/Solver.o
 
-
-
-
-
-# Limpiar
+# si es que se compilo, borramos la carpeta y el ejecutable
 clean:
 	rm -rf $(OBJ_DIR) water_jugs
-
-.PHONY: all clean tracy
